# grand-chess-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.json
.cargo/: config.toml
.github/workflows/: rust.yml
board/: Cargo.toml
board/.cargo/: config.toml
board/src/: bit_board.rs  lib.rs  move.rs  piece.rs
board/src/movegen/: mod.rs
engine/: Cargo.toml  build.rs
engine/src/: lib.rs  transposition.rs  uci.rs
engine/src/board/: bit_board.rs  hash.rs  mod.rs  move.rs  piece.rs  scores.rs
engine/src/board/movegen/: bitmasks.rs  mod.rs
engine/src/nnue/: feature_transformer.rs  half_kp.rs  mod.rs  network.rs
engine/src/nnue/layers/: crelu.rs  linear_layer.rs  mod.rs
src/: UCI.rs  bit_board.rs  board.rs  common.rs  main.rs  perft.rs  piece.rs
src/board/: bit_board.rs  mod.rs  move.rs  piece.rs  util.rs
src/board/movegen/: bitmasks.rs  mod.rs
src/engine/: mod.rs  transposition.rs
src/movegen/: bitmasks.rs  mod.rs
src/uci/: mod.rs
uci/: Cargo.toml
uci/src/: lib.rs
