[package]
name = "grand_chess_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "UCI"
path = "src/UCI.rs"

[[bin]]
name = "perft"
path = "src/perft.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
rand = "0.8.5"
rayon = "1.10.0"
static_init = "1.0.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
