[workspace]
members = ["engine", "uci"]

[package]
name = "grand_chess_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = {path = "engine/"} 
uci = {path = "uci/"}

[profile.dev]
opt-level = 0 # No optimization
debug = true  # Include debug symbols

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
